[metadata]
name = pokie-location
version = attr: pokie_location.__version__
url = https://github.com/oddbit-project/pokie_location
author = João Pinheiro
description = Location Services for Pokie
long_description = file: README.md
license = MIT
classifiers =
    Environment :: Web Environment
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://oddbit-project.github.io/pokie_location/
    Source = https://github.com/oddbit-project/pokie_location

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    pokie>=0.3.0

[bdist_rpm]
doc_files = README.md

[flake8]
exclude = dist,build,.git,.tox,./tests/
extend-ignore = E501, W504 ,F401
max-line-length = 120
